--- a/settings.json
+++ b/settings.json
@@ -2,6 +2,7 @@
     "domain": "localhost",
     "host": "localhost",
     "port": 3000,
-    "max_sessions": 50 
+    "max_sessions": 50,
+    "password": "5f4dcc3b5aa765d61d8327deb882cf99" 
 }
   
