--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
-    "domain": "localhost",
-    "host": "localhost",
-    "port": 3000,
+    "domain": "mtbridge.herokuapp.com",
+    "host": "mtbridge.herokuapp.com",
+    "port": 443,
     "max_sessions": 50,
     "password": "5f4dcc3b5aa765d61d8327deb882cf99" 
 }
